--- a/operators/infoscale-operator/Makefile
+++ b/operators/infoscale-operator/Makefile
@@ -28,13 +28,13 @@ OPERATOR_PIPELINE_IMAGE ?= quay.io/redhat-isv/operator-pipelines-images:released
 
 # Define the paths for both auth files
 DOCKER_CONFIG := $(HOME)/.docker/config.json
-CONTAINERS_AUTH := $(XDG_RUNTIME_DIR)/containers/auth.json
+CONTAINERS_AUTH := /root/.docker/auth.json
 
 # A list of OCP versions to generate catalogs for
 # This list can be customized to include the versions that are relevant to the operator
 # DO NOT change this line (except for the versions) if you want to take advantage
 # of the automated catalog promotion
-OCP_VERSIONS=$(shell echo "v4.12 v4.13 v4.14 v4.15 v4.16 v4.17" )
+OCP_VERSIONS=$(shell echo "v4.12 v4.13 v4.14 v4.15 v4.16 v4.17 v4.18" )
 
 
 .PHONY: fbc-onboarding
